# CoreMark-RP2040

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  clean_lin.sh  clean_win.bat
.github/: dependabot.yml
.github/workflows/: dependabot.yml  generate-release.yml  test-github-actions-linux.yml  test-github-actions-windows.yml  test-github-actions.yml
scripts/: clean_lin.sh  clean_win.bat  setup_env.bat
src/: Coremark-RP2040.c  Coremark-RP2040.h  core_main.c  core_portme.c  core_portme.h  coremark.h  ee_printf.c
